# TrieDocs

./: .gitignore  .gitmodules  CMakeLists.txt  LibreDoc.pro  TrieDocs.pro  index.html  params.json
3party/: CMakeLists.txt
3party/lzham-r101/: lzham.sln
3party/lzham-r101/lzhamdecomp/: lzham_types.h
3party/miniz-r63/: README  miniz.c  miniz_tester.cpp  timer.cpp
libs/: CMakeLists.txt
libs/libscrypt/: CMakeLists.txt
libs/miniz/: CMakeLists.txt  libminiz.c  libminiz.h  libmyminiz.c  libmyminiz.h  miniz.pro  zlib.h
libs/mupdf/: CMakeLists.txt  mupdf.pro
libs/mupdf/freetype/: CMakeLists.txt
libs/mupdf/jbig2dec/: CMakeLists.txt
libs/mupdf/jpeg/: CMakeLists.txt
libs/mupdf/openjpeg/: CMakeLists.txt
libs/sqlite3/: CMakeLists.txt  libmysqlite3.c  libmysqlite3.h  libsqlite3.c  libsqlite3.h  sqlite3.c  sqlite3.h  sqlite3.pro
src/: CMakeLists.txt  DS_Store  Info.plist  Utf8-Latin-Convert.txt  bdd.cpp  bdd.h  commun.cpp.in  commun.h  dlgabout.cpp  dlgabout.h  dlgclient.cpp  dlgclient.h  dlgclient.ui  docautre.cpp  docautre.h  docgeneral.cpp  docgeneral.h  docpdf.cpp  docpdf.h  documentlecteurs.cpp  documentlecteurs.h  icone.icns  icone.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  reseau.cpp  reseau.h  resources.qrc  src.pro  traduction.cpp  traduction.h
src/cmake/: CPack.cmake  CPack.txt  GetGitRevisionDescription.cmake  MacOS.cmake  MacOS.txt  Traductions.txt  Windows.cmake  i18n.cmake
src/i18n/: CMakeLists.txt  README.md  en.qm  en.ts
src/icones/: Lisezmoi.txt
src/icones/langs/: Lisezmoi.txt
src/ressources/: db.sql  db_local.sql  db_local_fr.sql  requetes.sql
